--- a/app/views/buyer/print_entry.html.erb
+++ b/app/views/buyer/print_entry.html.erb
@@ -10,7 +10,7 @@
 			<%= dl_helper 'Online',  long_date(@entry.online) %>
 			<%= dl_helper 'Decided',  long_date(@entry.decided) if @entry.decided %>
 			<%= dl_helper 'Relisted',  long_date(@entry.relisted) if @entry.relisted %>
-			<%=  end_of_workday(Time.now) %>
+			<%#=  end_of_workday(Time.now) %>
 		</dl>
 	</div>
 </div>
