--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -22,12 +22,12 @@
 
   <body>
 
-    <%= render 'shared/navigation' %>
+    <%#= render 'shared/navigation' %>
 
     <div class="container">
 
       <div class="hero-unit">
-        <h1>Welcome to the new E-Bid!</h1>
+        <h1>Welcome to E-Bid!</h1>
 				<p>This is where businesses bid-and-buy auto parts.</p>
 	      <div class="row">
 	        <div class="span4">
